@@ -83,6 +83,7 @@
 	* Added feature to search using the spell checker suggestions when no results were found for the original query
 	* Added option tx_solr.search.spellchecking.searchUsingSpellChekerSuggestion
 	* Added support for keepAllOptionsOnSelection with facet queries
+	* Added API methods to the Index Queue to initialize specific indexing configurations only
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
